# OpenUSDFileFormatTemplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE  README.md
cmake/: FindHoudiniUSD.cmake
src/: debugCodes.h  openUsdFileFormatTemplate.cpp  openUsdFileFormatTemplate.h  plugInfo.json
